--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SaitamApp</string>
+    <string name="progress">Progress</string>
+    <string name="overview">Overview</string>
+    <string name="settings">Settings</string>
 </resources>
