--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="progress">Progress</string>
     <string name="overview">Overview</string>
     <string name="settings">Settings</string>
+    <string name="info">Info</string>
+    <string name="goal">The goal of this application is to keep track of your current push up progress. When doing push ups, click the buttons on the homepage to indicate how many push ups you have done. The progressbar and the stickers will inform you of your progress. to view your progress, navigate to the page by pressing the calendar button in the navigation bar.</string>
+    <string name="thankYou">All about SaitamApp</string>
+    <string name="see_less">see less</string>
+    <string name="see_more">see more</string>
 </resources>
